# CGI

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  projeto1CPP  projeto_1.cpp
ExternalResources/: Makefile  cmake_install.cmake  glm.cmake
ExternalResources/GLAD/: CMakeLists.txt  Makefile  cmake_install.cmake
ExternalResources/GLAD/include/glad/: glad.h
ExternalResources/include/: cg_window.hpp
ExternalResources/src/: cg_window.c  cg_window.cpp
OpenGLVS/: OpenGLVS.sln
OpenGLVS/OpenGLVS/: OpenGLVS.vcxproj  OpenGLVS.vcxproj.filters  main.c  shader.c
OpenGLVS/OpenGLVS/Debug/: vc141.idb
OpenGLVS/OpenGLVS/Debug/OpenGLVS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLVS.lastbuildstate
OpenGLVS/OpenGLVS/x64/Debug/: vc141.idb
OpenGLVS/OpenGLVS/x64/Debug/OpenGLVS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLVS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGLVS/x64/Debug/: OpenGLVS.ilk
Projeto 1/ExternalResources/: CMakeLists.txt
Projeto 1/ExternalResources/src/: cg_window.cpp
Projeto 2/: CMakeLists.txt  README.md  projeto_2.cpp
Projeto 2/ExternalResources/include/: OBJ_Loader.h  cg_window.hpp  model.h
Projeto 2/ExternalResources/src/: cg_window.cpp
Projeto 3/: CMakeLists.txt  projeto_2.cpp
Projeto 3/ExternalResources/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Projeto 3/ExternalResources/GLAD/: Makefile  cmake_install.cmake
Projeto 3/ExternalResources/GLAD/src/: glad.c
Projeto 3/ExternalResources/include/: OBJ_Loader.hpp  cg_window.hpp  mesh.h  model.h
Projeto 3/ExternalResources/src/: OBJ_Loader.cpp  cg_window.cpp
glfw/src/glfw-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
glfw/src/glfw-build/src/: Makefile  cmake_install.cmake  glfw3.pc
glfw/src/glfw-stamp/: download-glfw.cmake  extract-glfw.cmake  glfw-urlinfo.txt
